#
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program.  If not, see http:#www.gnu.org/licenses/.
#

[metadata]
name = smile_simulator
version = 0.1
description = SMILe Simulator
author = Tomasz Jankowski
author_email = t.jankowski@pwr.edu.pl
license = file: LICENSE
url = https://github.com/goofacz/smile
download_url = https://github.com/goofacz/smile
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU Affero General Public License v3
    Operating System :: OS Independent
    Programming Language :: Python :: 3

[options]
packages = find:

[options.entry_points]
console_scripts =
    smile_simulate = smile_simulator.smile_simulate:main